Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,16 +31,42 @@
         <h1>
 <a id="firenzejs" class="anchor" href="#firenzejs" aria-hidden="true"><span class="octicon octicon-link"></span></a>firenze.js</h1>
 
-<p><a href="http://travis-ci.org/fahad19/firenze"><img src="https://secure.travis-ci.org/fahad19/firenze.png?branch=master" alt="Build Status"></a></p>
-
-<blockquote>
-<p>Node.js ORM for relational databases.</p>
-</blockquote>
+<p><a href="http://travis-ci.org/fahad19/firenze"><img src="https://secure.travis-ci.org/fahad19/firenze.png?branch=master" alt="Build Status"></a> <a href="https://coveralls.io/r/fahad19/firenze?branch=master"><img src="https://coveralls.io/repos/fahad19/firenze/badge.svg?branch=master" alt="Coverage Status"></a> <a href="https://www.npmjs.com/package/firenze"><img src="https://img.shields.io/npm/v/firenze.svg" alt="npm"></a></p>
 
 <p>Install it with npm:</p>
 
 <pre><code>$ npm install --save firenze
 </code></pre>
+
+<hr>
+
+<p>firenze.js is a node.js object relational mapper targetting SQL databases.</p>
+
+<p>Key features include:</p>
+
+<ul>
+<li>Written in ES6 (works in both node and io.js)</li>
+<li>Adapter based structure to plug in any database</li>
+<li>Promise based workflow</li>
+<li>Strong validation support</li>
+</ul>
+
+<p>The project is still in heavy development, and more features are expected to land in future releases.</p>
+
+<p>Terminologies for developing with firenze.js can be broken down into a handful of items:</p>
+
+<ul>
+<li>Database
+
+<ul>
+<li>Adapter</li>
+</ul>
+</li>
+<li>Collection</li>
+<li>Model</li>
+</ul>
+
+<p>Each of them are discussed in the documentation below.</p>
 
 
 
