Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <p>firenze.js is a node.js object relational mapper targetting SQL databases.</p>
 
-<p>Key features include:</p>
+<p><strong>Key features:</strong></p>
 
 <ul>
 <li>Written in ES6 (works in both node and io.js)</li>
@@ -53,15 +53,19 @@
 
 <p>The project is still in heavy development, and more features are expected to land in future releases.</p>
 
+<p><strong>Available adapters:</strong></p>
+
+<ul>
+<li><a href="https://github.com/fahad19/firenze-adapter-mysql">MySQL</a></li>
+</ul>
+
+<p><strong>Terminologies:</strong></p>
+
 <p>Terminologies for developing with firenze.js can be broken down into a handful of items:</p>
 
 <ul>
-<li>Database
-
-<ul>
+<li>Database</li>
 <li>Adapter</li>
-</ul>
-</li>
 <li>Collection</li>
 <li>Model</li>
 </ul>
@@ -99,7 +103,6 @@
 <a href="#adapter">Adapter</a>
 
 <ul>
-<li><a href="#available-adapters">Available adapters</a></li>
 <li><a href="#usage-1">Usage</a></li>
 <li>
 <a href="#methods-1">Methods</a>
@@ -380,15 +383,6 @@ post.save().then(<span class="pl-k">function</span> (<span class="pl-smi">model<
 <a id="adapter" class="anchor" href="#adapter" aria-hidden="true"><span class="octicon octicon-link"></span></a>Adapter</h1>
 
 <p>Adapter is responsible for making the actual database operations.</p>
-
-<h2>
-<a id="available-adapters" class="anchor" href="#available-adapters" aria-hidden="true"><span class="octicon octicon-link"></span></a>Available adapters</h2>
-
-<p>You can find further documentation on querying on their own sites:</p>
-
-<ul>
-<li><a href="https://github.com/fahad19/firenze-adapter-mysql">MySQL</a></li>
-</ul>
 
 <h2>
 <a id="usage-1" class="anchor" href="#usage-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h2>
