Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -275,7 +275,11 @@
 <h2>
 <a id="iojs" class="anchor" href="#iojs" aria-hidden="true"><span class="octicon octicon-link"></span></a>io.js</h2>
 
-<p>Same as Node.js since <code>npm</code> is the common package manager.</p>
+<p>Installation is same as Node.js since <code>npm</code> is the common package manager.</p>
+
+<p>To import:</p>
+
+<div class="highlight highlight-js"><pre><span class="pl-k">import</span> firenze <span class="pl-k">from</span> <span class="pl-s"><span class="pl-pds">'</span>firenze<span class="pl-pds">'</span></span>;</pre></div>
 
 <h2>
 <a id="browser" class="anchor" href="#browser" aria-hidden="true"><span class="octicon octicon-link"></span></a>Browser</h2>
