Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>firenze.js</h1>
-        <p>Node.js ORM for relational databases (MySQL et al).</p>
+        <p>Adapter based JavaScript ORM for Node.js and the browser</p>
 
         <p class="view"><a href="https://github.com/fahad19/firenze">View the Project on GitHub <small>fahad19/firenze</small></a></p>
 
